Fixed css bug where Downloads links were not showing in a line.

--- a/app/assets/stylesheets/blacklight_overrides.css.scss
+++ b/app/assets/stylesheets/blacklight_overrides.css.scss
@@ -7,13 +7,14 @@ body {
 #hd nav {
  margin-top: 7.5em;
 }
-#hd nav ul {
+#hd nav ul,
+nav#downloads ul {
  list-style-type:none;
  margin:0;
  padding:0;
 }
-#hd nav li
-{
+#hd nav li,
+nav#downloads ul li {
  display:inline;
  padding-right:10px;
 }
